-fixed dark mode setting

--- a/public/css/dark-mode.css
+++ b/public/css/dark-mode.css
@@ -94,5 +94,20 @@ select {
     display: none;
 }*/
 
+.shop-items {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.statistics {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
 
 
